Changes in 1.8 (??.10.2012)

 - Fix a bunch of off-by one errors in irr::core::string in functions equals_substring_ignore_case, findFirst, findFirstChar, findNext, findLast, findLastChar, replace, remove and removeChars.
   This prevents some potential memory access errors, find functions no longer try to find the \0, replace no longer replaces the \0 and remove no longer tries to remove it (which did remove the last character instead).

 - matrix4::setRotationAxisRadians added

 - quaternion conversions to and from matrix4 no longer invert rotations. 
   To test if your code was affected by this you can set IRR_TEST_BROKEN_QUATERNION_USE in quaternion.h and try to compile your application.
   Then on all compile-errors when you pass the matrix to the quaternion you can replace the matrix transposed matrix.
   For all errors you get on getMatrix() you can use quaternion::getMatrix_transposed instead.

 - CGUIEnvironment::loadGui - loading a gui into a target-element no longer messes up when the gui-file contained guienvironment serialization.

 - Colladawriter now exports materials per node when those are used in Irrlicht
 
 - Colladawriter now writing matrices for node transformations as old solution did not work with CDummyTransformationSceneNode's.
 
 - Colladawriter no longer create an extra node for the scenemanger as <visual_scene> has that job in Collada.
 
 - Colladwriter no longer makes all Scenenodes children of ambient-light as that can be parallel on the same layer instead.
 
 - Colladareader now creates the ambient-light correct instead of creating a point-light for it.

 - Add IAnimatedMeshSceneNode::getLoopMode (asked for by JLouisB)

 - CSceneNodeAnimatorCameraFPS now resets the key-input when it was disabled (thx @ gerdb for reporting and patch-proposal)

 - Properly destroy OpenGL resources on linux (thx @curaga for the patch)

 - Fix diplay bux in the attribute-panel of the GUIEditor. Fixes bug 3517314 (thx @Darkcoder  for reporting).
